fix: bubble arrow menu overflowed in small screen (#79)

--- a/src/rogu/ui/MessageContent/index.scss
+++ b/src/rogu/ui/MessageContent/index.scss
@@ -29,7 +29,7 @@ $avatarSize: 32px;
     flex-direction: column;
     align-items: flex-end;
     position: relative;
-    width: 100%;
+    min-width: 100px;
     max-width: 548px;
     box-sizing: border-box;
 
@@ -102,7 +102,7 @@ $avatarSize: 32px;
         display: flex;
 
         .rogu-message-content__bubble__body__inner {
-          width: 100%;
+          min-width: 80px;
         }
       }
     }
